# stm32l011xx-cmake

./: CMakeLists.txt  README.md  ld.ld
src/: main.c  stm32l0xx_hal_msp.c
sys/config/: stm32l0xx_hal_conf.h  stm32l0xx_it.c  stm32l0xx_it.h
